Updated German (missing/new translations and fixes)

--- a/language/resource.language.de_de/strings.po
+++ b/language/resource.language.de_de/strings.po
@@ -331,7 +331,7 @@ msgid ""
 "Set the idle timeout (in minutes) before devices will be disconnected "
 "(defaults to 0 for no timeout). Applies to devices where \"Enable Standby\" "
 "has been activated in the LibreELEC device connection context menu."
-msgstr "Das Leerlauf-Timeout (in Minuten) einstellen, bevor die Geräte getrennt werden (standardmäßig 0 für kein Timeout). Gilt für Geräte, bei denen \"Standby aktivieren\" im Kontextmenü der @DISTRONAME@ Geräteverbindung Menü aktiviert wurde."
+msgstr "Das Leerlauf-Timeout (in Minuten) einstellen, bevor die Geräte getrennt werden (standardmäßig 0 für kein Timeout). Gilt für Geräte, bei denen \"Standby aktivieren\" im Kontextmenü der @DISTRONAME@-Geräteverbindung Menü aktiviert wurde."
 
 msgctxt "#774"
 msgid "Automatic reconnect previously paired device after booting"
@@ -379,7 +379,7 @@ msgstr "VESA-Anzeigemodi ein-/auschalten"
 
 msgctxt "#791"
 msgid "Set CPU governor for all cores"
-msgstr "CPU-Regelung für Kerne einstellen"
+msgstr "CPU-Regelung (Governor) für Kerne einstellen"
 
 msgctxt "#792"
 msgid "Enable/Disable HDD parking on power off/suspend"
@@ -959,7 +959,7 @@ msgid ""
 "@DISTRONAME@ installation - setting your location, timezone and connecting "
 "you to the internet.[CR][CR]These settings can be changed later by "
 "navigating to Programs > @DISTRONAME@ Settings."
-msgstr "Dieser Assistent führt dich durch die Einrichtung einer neuen Installation von @DISTRONAME@. Dazu zählt u.a. die Auswahl des Standortes, der Zeitzone und die Konfiguration der Internetverbindung.[CR][CR]Diese Einstellungen können später über Programme > @DISTRONAME@ Konfiguration angepasst werden."
+msgstr "Dieser Assistent führt dich durch die Einrichtung einer neuen Installation von @DISTRONAME@. Dazu zählt u.a. die Auswahl des Standortes, der Zeitzone und die Konfiguration der Internetverbindung.[CR][CR]Diese Einstellungen können später über Programme > @DISTRONAME@-Konfiguration angepasst werden."
 
 msgctxt "#32303"
 msgid "Next"
@@ -1297,7 +1297,7 @@ msgstr "CEC"
 
 msgctxt "#32505"
 msgid "HDD"
-msgstr "Festplatte"
+msgstr "Festplatte (HDD)"
 
 msgctxt "#32506"
 msgid "Device Tree"
